--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </head>
 <body>
   <header>
-    <img src="IMG_20241121_142056_211.jpg" alt="Логотип музея">
+    <img src="/img/5330450586870605071.jpg" alt="Логотип музея">
   </header>
   <main>
     <h1>Музей "Другой Взгляд"</h1>
