--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </head>
 <body>
   <header>
-    <img src="5330450586870605071.jpg" alt="Логотип музея">
+    <img src="blob:https://web.telegram.org/9a09e77c-6985-44e6-b387-1573907b7918" alt="Логотип музея">
   </header>
   <main>
     <h1>Музей "Другой Взгляд"</h1>
