--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </head>
 <body>
   <header>
-    <img src="blob:https://web.telegram.org/9a09e77c-6985-44e6-b387-1573907b7918" alt="Логотип музея">
+    <img src="https://sun9-74.userapi.com/impg/q1NVgSOgDRZQCFebg0i-SlV942AwsxLDVsXfVw/q-CG8KBLy_4.jpg?size=1108x1077&quality=95&sign=1b0bd2d4a7f01eed3e18311c4682e90c&type=album" alt="Логотип музея">
   </header>
   <main>
     <h1>Музей "Другой Взгляд"</h1>
