--- a/index.html
+++ b/index.html
@@ -144,11 +144,14 @@
       bottom: 50px;
       right: 70px;
     }
+    .img{
+        width: 11vw;
+    }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://sun9-74.userapi.com/impg/q1NVgSOgDRZQCFebg0i-SlV942AwsxLDVsXfVw/q-CG8KBLy_4.jpg?size=1108x1077&quality=95&sign=1b0bd2d4a7f01eed3e18311c4682e90c&type=album" alt="Логотип музея">
+    <img src="https://sun9-74.userapi.com/impg/q1NVgSOgDRZQCFebg0i-SlV942AwsxLDVsXfVw/q-CG8KBLy_4.jpg?size=1108x1077&quality=95&sign=1b0bd2d4a7f01eed3e18311c4682e90c&type=album" alt="Логотип музея" class="img">
   </header>
   <main>
     <h1>Музей "Другой Взгляд"</h1>
