--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
       right: 70px;
     }
     .img{
-        width: 11vw;
+        width: 20%;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://sun9-74.userapi.com/impg/q1NVgSOgDRZQCFebg0i-SlV942AwsxLDVsXfVw/q-CG8KBLy_4.jpg?size=1108x1077&quality=95&sign=1b0bd2d4a7f01eed3e18311c4682e90c&type=album" alt="Логотип музея" class="img">
+    <img src="./5330450586870605071.png" alt="Логотип музея" class="img">
   </header>
   <main>
     <h1>Музей "Другой Взгляд"</h1>
